Confirm button fixed

--- a/src/html/shop-shop-cart-payment.html
+++ b/src/html/shop-shop-cart-payment.html
@@ -169,9 +169,9 @@
                 </div>
                 <div class='clearfix'></div>
             </div>
-            <div class='row mth'>
+            <div class='row mt_40'>
                 <div class='col-md-2'>
-                    <a class='btn btn-inverse btn-embossed' href='/br/mocks/shop/products/servers/released' id='change_date'>Confirmar</a>
+                    <a class='btn btn-default' href='/br/mocks/shop/products/servers/released' id='change_date'>Confirmar</a>
                 </div>
             </div>
         </div>
