Adding pages for registering clients

--- a/src/html/shop-shopping-cart.html
+++ b/src/html/shop-shopping-cart.html
@@ -57,7 +57,7 @@
           <tbody>
             <tr>
               <td>
-                <a title="Remove this item" href="/br/shop/cart/remove/77" class="remove_cart">
+                <a title="Remove this item" href="#" class="remove_cart">
                   <i class="fa fa-trash-o"></i>
                 </a>
               </td>
@@ -79,7 +79,7 @@
               <td class="text-center">
                 <div class="quantity_item_cart clearfix">
                   <input type="button" value="-" class="less">
-                  <input type="text" value="1" name="quantity" disabled="" class="qty_item">
+                  <input type="text" value="1" name="quantity" class="qty_item">
                   <input type="button" value="+" class="add">
                 </div>
               </td>
@@ -97,12 +97,12 @@
                       <input type="text" class="coupon">
                     </div>
                     <div class="col-md-4 col-xs-5">
-                      <a href="#" class="btn btn_3D btn-primary no_margin">Aplicar Cupom</a>
+                      <a href="#" class="btn btn-primary no_margin">Aplicar Cupom</a>
                     </div>
                   </div>
                   <div class="col-md-8 col-xs-8 no_padding">
-                    <a href="/br/shop/review" class="btn btn_3D btn-success no_margin pull-right">Finalizar Compra</a>
-                    <a href="/br/shop" class="btn btn_3D btn-primary mt_0 pull-right">Continuar Comprando</a>
+                    <a class="btn btn-success no_margin pull-right">Finalizar Compra</a>
+                    <a class="btn btn-primary mt_0 pull-right">Continuar Comprando</a>
                   </div>
                 </div>
               </td>
