--- a/src/html/shop-login.html
+++ b/src/html/shop-login.html
@@ -24,11 +24,11 @@
           <a class="step_icon fa fa-database" href="#"></a>
           <h5>Configurar Produto</h5>
         </li>
-        <li class="active">
+        <li>
           <a class="step_icon fa fa-shopping-cart" href="#"></a>
           <h5>Revisar Compra</h5>
         </li>
-        <li>
+        <li class="active">
           <a class="step_icon fa fa-user" href="#"></a>
           <h5>Identificação</h5>
         </li>
@@ -45,20 +45,21 @@
     <div class="container clearfix">
       <div id="form_login" class="col-md-4 mb_0">
         <div class="well well-lg mb_0">
-          <form id="new_user" class="mb_0"><h3>Logar na sua Conta</h3>
+          <form method="post" id="new_user" class="mb_0">
+          <h3>Logar na sua Conta</h3>
           <div class="col-md-12">
-            <label for="user_email">Email</label>
+            <label>Email</label>
             :
-            <input type="email" id="user_email" class="form-control">
+            <input type="email" id="user_email" name="user[email]" class="form-control">
           </div>
           <div class="col-md-12 mt_20">
             <label>Senha</label>
             :
-            <input type="password" id="user_password" class="form-control">
+            <input type="password" id="user_password" name="user[password]" class="form-control">
           </div>
           <div class="col-md-12 mb_0 mt_20">
-            <input type="submit" class="btn btn_3D btn-primary no_margin" value="Sign In">
-            <a href="/br/password/new" class="pull-right">Forgot password?</a>
+            <input type="submit" class="btn btn-primary no_margin" value="Sign In" name="commit">
+            <a href="#" class="pull-right">Forgot password?</a>
             <br>
           </div>
           </form>
@@ -66,24 +67,24 @@
       </div>
       <div id="form_register" class="col-md-8 mb_0">
         <h3>Não tem uma conta? Registre-se agora.</h3>
-        <formclass="mb_0">
+        <form method="post" id="new_user" class="mb_0"><input type="hidden" value="✓">
         <div class="col-md-4">
           <label>Email</label>
           :
-          <input type="email" id="user_email" class="form-control">
+          <input type="email" id="user_email" name="user[email]" class="form-control">
         </div>
         <div class="col-md-4">
           <label>Senha</label>
           :
-          <input type="password" id="user_password" class="form-control">
+          <input type="password" id="user_password" name="user[password]" class="form-control">
         </div>
         <div class="col-md-4">
           <label>Confirme sua senha</label>
           :
-          <input type="password" id="user_password_confirmation" class="form-control">
+          <input type="password" id="user_password_confirmation" name="user[password_confirmation]" class="form-control">
         </div>
         <div class="col-md-12 mb_0 mt_20">
-          <input type="submit" class="btn btn_3D btn-primary no_margin" value="Sign Up" name="commit">
+          <input type="submit" class="btn btn-primary no_margin" value="Sign Up" name="commit">
         </div>
         </form>
       </div>
