--- a/src/html/shop-plans-customize.html
+++ b/src/html/shop-plans-customize.html
@@ -89,7 +89,7 @@
             <hr>
             <div class="row">
               <div class="col-md-12">
-                <label class="mb_l">Sistema Operacional</label>
+                <label class="mb_20">Sistema Operacional</label>
                 <div class="row">
                   <div class="col-md-3">
                     <div class="box_SO active">
@@ -132,7 +132,7 @@
                     </select>
                   </div>
                 </div>
-                <div class="row mt_l">
+                <div class="row mt_20">
                   <div class="col-md-3">
                     <div class="box_SO">
                       <div class="box_img">
@@ -180,7 +180,7 @@
             <div class="row">
               <div class="col-md-12">
                 <label>Disco</label>
-                <center class="switch_disk mb_l">
+                <center class="switch_disk mb_20">
                   <span class="switch_option1 active">SAN</span>
                   <input id="custom-switch-disk" type="checkbox">
                   <span class="switch_option2">LOCAL</span>
@@ -264,7 +264,7 @@
               </div>
             </div>
             <hr>
-            <div class="row mt_l">
+            <div class="row mt_20">
               <div class="col-md-12">
                 <div id="submit_form">
                   <input type="submit" name="commit" value="Revisar Compra" class="btn btn-primary btn-lg pull-right">
