Shop cart payment and customize are now done - ps. js was not implemented at this point

--- a/src/html/shop-plans-customize.html
+++ b/src/html/shop-plans-customize.html
@@ -1,4 +1,6 @@
 {% extends 'layouts/shop.html' %} {% block content %}
+
+
 <section class="page_title page_title_mini">
     <div class="container clearfix">
         <h2>Servidores Dedicados</h2>
@@ -82,7 +84,8 @@
                         <div class="col-md-12">
                             <label>Memória RAM</label>
                             <div class="range-slider">
-                                <input type="text" value="" />
+                                <!-- <input type="text" value="" /> -->
+                                <!-- <input type="text" id="example_id" name="example_name" value="" /> -->
                             </div>
                         </div>
                     </div>
@@ -310,4 +313,7 @@
         </form>
     </div>
 </section>
+
+
+
 {% endblock %} {% block javascript %} {% endblock %}
