--- a/src/html/companies-groups.html
+++ b/src/html/companies-groups.html
@@ -165,7 +165,7 @@
 <!-- CONTENT -->
 <div class='wrapper wrapper-content'>
     <div class='row'>
-        <div class='col-lg-10 companies'>
+        <div class='col-lg-10 s-element'>
             <div class=''>
                 <h4>Groups</h4>
             </div>
@@ -174,11 +174,11 @@
             </div>
             <br>
             <br>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-cloud"></i>
                 <a>Cloud Servers</a>
             </div>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-cloud"></i>
                 <a>Bare Metal</a>
             </div>
