Making Some Improvements on all Base Theme

--- a/src/html/companies-settings.html
+++ b/src/html/companies-settings.html
@@ -156,7 +156,7 @@
         <span>Foo Inc.</span>
     </div>
     <div class="col-lg-2 pull-right">
-        <a class="btn btn-default btn-danger" href="#" role="button"><i class="fa fa-times"></i> Delete Company</a>
+        <a class="btn btn-danger" href="#" role="button"><i class="fa fa-times"></i> Delete Company</a>
     </div>
 </div>
 <div class='row wrapper backs-nav'>
