--- a/src/html/companies-groups-show.html
+++ b/src/html/companies-groups-show.html
@@ -116,9 +116,9 @@
         <ul class='nav navbar-top-links navbar-right profiles'>
             <li class='dropdown profile-element'>
                 <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
-                    <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
+                    <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/44.jpg'>
                     <span class=''>
-            <strong class=''>David Williams</strong>
+            <strong class=''>Anne Klein</strong>
             <b class='caret'></b>
           </span>
                 </a>
@@ -145,137 +145,59 @@
 </div>
 <div class='box_notice'>
 </div>
-
 <!-- APP -->
 <div class='row wrapper backs'>
-    <div class='col-lg-4 go-back'>
+    <div class='col-lg-3 go-back'>
         <i class="fa fa-angle-left"></i>
+        <span>Categories</span>
     </div>
     <div class='col-lg-5 title'>
         <span>Servers</span>
     </div>
-    <div class="col-lg-3">
-        <a class="btn btn-default btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Group</a>
-        <a class="btn btn-default btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
+    <div class="col-lg-3 pull-right">
+        <a class="btn btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Category</a>
+        <a class="btn btn-default pull-right mr_20" role="button"> <i class="fa fa-floppy-o"></i> Save</a>
+    </div>
+</div>
+<div class='row wrapper backs-nav'>
+    <div class='col-lg-6 col-lg-offset-3 comp-nav'>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-info"></i>
+                <span>Information</span>
+            </a>
+        </div>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-tags"></i>
+                <span>Groups</span>
+            </a>
+        </div>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-plus"></i>
+                <span>New Group</span>
+            </a>
+        </div>
     </div>
 </div>
 <!-- CONTENT -->
 <div class='wrapper wrapper-content fix-padding-mini-dashs'>
     <div class='row'>
-        <div class="col-lg-8">
-            <div class="comp-s-item border-bottom clearfix">
-                <div class='col-lg-4'>
-                    <h4>Name</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
-                </div>
-                <div class="col-lg-8">
-                    <div class="col-lg-8">
-                        <span>Current name</span>
-                    </div>
-                    <div class="col-lg-4">
-                        <button class="pull-right btn btn-default btn-inverse">Edit name</button>
-                    </div>
-                </div>
+        <div class="col-lg-12 s-element">
+            <br>
+            <div class="pull-right">
+                <button class="btn btn-default btn-inverse">New Group</button>
             </div>
-            <div class="comp-s-item border-bottom clearfix">
-                <div class='col-lg-4'>
-                    <h4>Plans</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
-                </div>
-                <div class="col-lg-8">
-                    <button class="pull-right btn btn-primary">Edit Plans</button>
-                </div>
+            <br>
+            <br>
+            <div class="s-element-item">
+                <i class="fa fa-cloud"></i>
+                <a>Cloud Servers</a>
             </div>
-            <div class="comp-s-item border-bottom clearfix">
-                <div class='col-lg-4'>
-                    <h4>Slug</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
-                </div>
-                <div class="col-lg-8">
-                    <div class="col-lg-8">
-                        <span>Current slug</span>
-                    </div>
-                    <div class="col-lg-4">
-                        <button class="pull-right btn btn-default btn-inverse">Edit slug</button>
-                    </div>
-                </div>
-            </div>
-            <div class="comp-s-item border-bottom clearfix">
-                <div class='col-lg-4'>
-                    <h4>Description</h4>
-                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
-                </div>
-                <div class="col-lg-8">
-                    <div class="col-lg-8">
-                        <span>High Performance Server in a Class A Datacenter</span>
-                    </div>
-                    <div class="col-lg-4">
-                        <button class="pull-right btn btn-default btn-inverse">Edit description</button>
-                    </div>
-                </div>
-            </div>
-            <div class="comp-s-item border-bottom clearfix">
-                <div class='col-lg-4'>
-                    <h4>Icon</h4>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
-                </div>
-                <div class="col-lg-8">
-                    <div class="clearfix">
-                        <div class="col-sm-3">
-                            <span>Current Icon:</span>
-                        </div>
-                        <div class="col-sm-7">
-                            <i class="fa fa-cloud"></i>
-                        </div>
-                        <div class="pull-right">
-                            <button class="btn btn-default btn-inverse">Edit icon</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="form-group">
-                        <form class="simple_form form-horizontal form-group string required">
-                            <label class="col-sm-3 string required control-label">
-                                New icon: 
-                            </label>
-                            <div class="col-sm-7">
-                                <select class="form-control" style="font-family: 'FontAwesome', Helvetica;">
-                                    <option>Cloud - &#xf0c2;</option>
-                                    <option>Truck - &#xf0d1;</option>
-                                    <option>Plane - &#xf072;</option>
-                                    <option>Ship - &#xf21a;</option>
-                                    <option>Car - &#xf1b9;</option>
-                                </select>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="comp-s-item clearfix">
-                <div class='col-lg-4'>
-                    <h4>Enable Group</h4>
-                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
-                </div>
-                <div class="col-lg-8">
-                    <input type="checkbox" />
-                    <strong class="ml_10">Enabled</strong>
-                </div>
-            </div>
-        </div>
-        <!-- preview -->
-        <div class="col-lg-4">
-            <div class="comp-s-item clearfix">
-                <div class="mt_20">
-                    <div class="box_group">
-                        <div class="box_icon_group">
-                          <a href="/br/shop/servers/cloud-servers">
-                            <i class="fa fa-cloud"></i>
-                          </a>
-                        </div>
-                        <h3>Cloud Servers</h3>
-                        <p>Cloud Servers on SoftLayer, an IBM Company</p>
-                    </div>
-                </div>
+            <div class="s-element-item">
+                <i class="fa fa-cloud"></i>
+                <a>Bare Metal</a>
             </div>
         </div>
     </div>
@@ -288,7 +210,7 @@
         <a href="#" class='text-muted'>Contato</a>
     </div>
     <div class="copys pull-left">
-        <span class='text-muted'>Copyright © 2015 Zertico</span>
+        <span class='text-muted'>Copyright © 2015 Foo Inc</span>
     </div>
 </div>
 {% endblock %} {% block javascript %} {% endblock %}
