--- a/src/html/docs.html
+++ b/src/html/docs.html
@@ -169,7 +169,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="col-md-6">
             <h3>Main HTML elements</h3>
 
-            <p>Like the Admin context, the Store context also has an unchanging structure:</p>
+            <p>Most of the time the structure is as follows, although it might change in some pages:</p>
             <ol>
                 <li><code>#shop</code> main container for body elements.</li>
                 <li><code>#header</code> navigation <b>menu</b>.</li>
@@ -179,6 +179,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <li><code>.page_title</code> container with page title and breadcrumb</li>
                 <li><code>#page_content</code> main container for html elements.</li>
                 <li><code>.big-footer</code> main container for footer.</li>
+                <li><code>#footer</code> copyrights footer.</li>
             </ol>
             <br>
         </div>
@@ -189,10 +190,9 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="col-md-12">
             <section>
                 <h3>Layout structure</h3>
-                <p>The base theme for the store context covers 5 main sections of the layout and also some basic CSS that aligns all together. Those 5 main sections are:</p>
+                <p>The base theme for the store context covers 4 main sections of the layout and also some CSS to align them all together. Those 4 main sections are:</p>
                 <ul>
                     <li>Fixed header</li>
-                    <li>Page menu</li>
                     <li>Page title and breadcrumb</li>
                     <li>Main content</li>
                     <li>Fixed footer</li>
@@ -201,18 +201,15 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <h4>Fixed header</h4>
                     <p>The header contains the main menu. Here we can find the main links for navigation on the system.</p>
 
-                    <h4>Page Menu</h4>
-                    <p>The Page Menu contains links for navigation inside the Shop categories.</p>
+                    <h4>Page title and breadcrumb</h4>
+                    <p>Contains the page title, sometimes with a brief description, and the page breadcrumbs.</p>
                 </div>
                 <div class="col-md-6">
-                    <h4>Page title and breadcrumb</h4>
-                    <p>Contains only the page title and the page breadcrumbs.</p>
-
                     <h4>Main content</h4>
                     <p>The main part of the layout, the system pages will be loaded in this section. </p>
 
                     <h4>Fixed footer</h4>
-                    <p>The footer is always sticky to the bottom of the page. In the footer, there are many useful links, such as links for navigation and social media.</p>   
+                    <p>The footer is at the bottom of the page. In the footer, there are many useful links, such as links for navigation and social media.</p>   
                 </div>
             </section>
         </div>
