Editing docs, separating shop in more .less files, and some other small changes

--- a/src/html/companies-categories-show.html
+++ b/src/html/companies-categories-show.html
@@ -155,8 +155,8 @@
         <span>Servers</span>
     </div>
     <div class="col-lg-3">
-        <a class="btn btn-default btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Category</a>
-        <a class="btn btn-default btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
+        <a class="btn btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Category</a>
+        <a class="btn btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
     </div>
 </div>
 <!-- CONTENT -->
