--- a/src/html/docs.html
+++ b/src/html/docs.html
@@ -16,7 +16,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Base Theme Documentation</a>
+            <a class="navbar-brand" href="#">Base Theme Documentation</a>
         </div>
     </div>
 </div>
@@ -173,13 +173,11 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <ol>
                 <li><code>#shop</code> main container for body elements.</li>
                 <li><code>#header</code> navigation <b>menu</b>.</li>
-                <li><code>#header-wrap</code> main container for header elements.</li>
                 <li><code>#content</code> main container for page elements.</li>
                 <li><code>#page-menu</code> navigation sub-menu</li>
                 <li><code>.page_title</code> container with page title and breadcrumb</li>
                 <li><code>#page_content</code> main container for html elements.</li>
                 <li><code>.big-footer</code> main container for footer.</li>
-                <li><code>#footer</code> copyrights footer.</li>
             </ol>
             <br>
         </div>
@@ -206,7 +204,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
                 <div class="col-md-6">
                     <h4>Main content</h4>
-                    <p>The main part of the layout, the system pages will be loaded in this section. </p>
+                    <p>The main part of the layout, the content will be loaded in this section. </p>
 
                     <h4>Fixed footer</h4>
                     <p>The footer is at the bottom of the page. In the footer, there are many useful links, such as links for navigation and social media.</p>   
@@ -246,6 +244,9 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
                 <h4>_variables.less</h4>
                 <p>This file contains all the coloring styles and other variables useful to be used in the other less files.</p>
+
+                <h4>shop/...</h4>
+                <p>This directory contains all stylesheets responsible for the Store. The store context has a different folder, and its style is maintained in different files in order to maintain its organization, since it has a more complex structure.</p>
             </section>
             <hr>
             <footer>
