--- a/src/html/parts/page-nav.html
+++ b/src/html/parts/page-nav.html
@@ -3,13 +3,13 @@
 	    Logo
 	</li>
 	<li>
-	    <a href='index.html'>
+	    <a href='#'>
 	        <i class='fa fa-th-large'></i>
 	        <span class='nav-label'>Home</span>
 	    </a>
 	</li>
 	<li>
-	    <a href='layouts.html'>
+	    <a href='#'>
 	        <i class='fa fa-group'></i>
 	        <span class='nav-label'>Clients</span>
 	    </a>
@@ -22,10 +22,10 @@
 	    </a>
 	    <ul class='nav nav-second-level collapse'>
 	        <li>
-	            <a href='graph_flot.html'>Flot Charts</a>
+	            <a href='#'>Flot Charts</a>
 	        </li>
 	        <li class='active'>
-	            <a href='graph_morris.html'>Morris.js Charts</a>
+	            <a href='#'>Morris.js Charts</a>
 	        </li>
 	    </ul>
 	</li>
@@ -37,10 +37,10 @@
     </a>
     <ul class='nav nav-second-level collapse'>
       <li>
-        <a href='graph_flot.html'>Categories</a>
+        <a href='#'>Categories</a>
       </li>
       <li>
-        <a href='graph_morris.html'>Listing</a>
+        <a href='#'>Listing</a>
       </li>
     </ul>
 	</li>
@@ -52,10 +52,10 @@
     </a>
     <ul class='nav nav-second-level collapse'>
       <li>
-         <a href='form_basic.html'>Invoices</a>
+         <a href='#'>Invoices</a>
       </li>
       <li>
-         <a href='form_basic.html'>Pricing</a>
+         <a href='#'>Pricing</a>
       </li>
     </ul>
 	</li>
