--- a/src/html/parts/page-nav.html
+++ b/src/html/parts/page-nav.html
@@ -18,9 +18,9 @@
 	    <a href='#'>
 	        <i class='fa fa-building'></i>
 	        <span class='nav-label'>Providers</span>
-	        <span class='fa arrow'></span>
+	        <i class='fa fa fa-angle-left'></i>
 	    </a>
-	    <ul class='nav nav-second-level collapse'>
+	    <ul class='nav nav-second-level collapse in'>
 	        <li>
 	            <a href='#'>Flot Charts</a>
 	        </li>
@@ -33,7 +33,7 @@
     <a href='#'>
       <i class='fa fa-cube'></i>
       <span class='nav-label'>Products</span>
-      <span class='fa arrow'></span>
+      <i class='fa fa fa-angle-left'></i>
     </a>
     <ul class='nav nav-second-level collapse'>
       <li>
@@ -48,7 +48,7 @@
     <a href='#'>
       <i class='fa fa-money'></i>
       <span class='nav-label'>Financial</span>
-      <span class='fa arrow'></span>
+      <i class='fa fa fa-angle-left'></i>
     </a>
     <ul class='nav nav-second-level collapse'>
       <li>
