Adding some new files, folders, and doing improvements on general styling

--- a/src/html/shop-cart-login.html
+++ b/src/html/shop-cart-login.html
@@ -9,7 +9,7 @@
             <li>
                 <a href="#">Produtos e Serviços</a>
             </li>
-            <li class="active">Servidores Dedicados</li>
+            <li class="active">Carrinho de Compras</li>
         </ol>
     </div>
 </section>
@@ -54,7 +54,7 @@
                             <input type="password" id="user_password" class="form-control">
                         </div>
                         <div class="col-md-12 mb_0 mt_20">
-                            <input type="submit" class="btn btn_3D btn-primary no_margin" value="Sign In">
+                            <input type="submit" class="btn btn-primary no_margin" value="Sign In">
                             <a href="" class="pull-right">Forgot password?</a>
                             <br>
                         </div>
