--- a/src/html/shop-cart-payment.html
+++ b/src/html/shop-cart-payment.html
@@ -139,39 +139,59 @@
                 <label>Forma de Pagamento</label>
             </div>
             <div class='row'>
-                <div class='col-md-3'>
-                    <label>
-                        <input data-toggle='radio' id='card' name='group1' type='radio' value='1'>
-                        <span style='padding-left: 5px;'>Credit Card</span>
-                        </input>
-                    </label>
+                <div class='col-md-2'>
+                    <div class="payment-option">
+                        <div class="payment-icon">
+                            <i class="fa fa-credit-card"></i>
+                        </div>
+                        <label>
+                            <input data-toggle='radio' id='card' name='group1' type='radio' value='1'>
+                            <span style='padding-left: 5px;'>Credit Card</span>
+                            </input>
+                        </label>
+                    </div>
                 </div>
-                <div class='col-md-3'>
-                    <label>
-                        <input data-toggle='radio' id='paypal' name='group1' type='radio' value='2'>
-                        <span style='padding-left: 5px;'>Paypal</span>
-                        </input>
-                    </label>
+                <div class='col-md-2'>
+                    <div class="payment-option">
+                        <div class="payment-icon">
+                            <i class="fa fa-paypal"></i>
+                        </div>
+                        <label>
+                            <input data-toggle='radio' id='paypal' name='group1' type='radio' value='2'>
+                            <span style='padding-left: 5px;'>Paypal</span>
+                            </input>
+                        </label>
+                    </div>
                 </div>
-                <div class='col-md-3'>
-                    <label>
-                        <input data-toggle='radio' id='pagseguro' name='group1' type='radio' value='3'>
-                        <span style='padding-left: 5px;'>PagSeguro</span>
-                        </input>
-                    </label>
+                <div class='col-md-2'>
+                    <div class="payment-option">
+                        <div class="payment-icon">
+                            <i class="fa fa-usd"></i>
+                        </div>
+                        <label>
+                            <input data-toggle='radio' id='pagseguro' name='group1' type='radio' value='3'>
+                            <span style='padding-left: 5px;'>PagSeguro</span>
+                            </input>
+                        </label>
+                    </div>
                 </div>
-                <div class='col-md-3'>
-                    <label>
-                        <input checked='' data-toggle='radio' id='billet' name='group1' type='radio' value='4'>
-                        <span style='padding-left: 5px;'>Boleto</span>
-                        </input>
-                    </label>
+                <div class='col-md-2'>
+                    <div class="payment-option">
+                        <div class="payment-icon">
+                            <i class="fa fa-money"></i>
+                        </div>
+                        <label>
+                            <input checked='' data-toggle='radio' id='billet' name='group1' type='radio' value='4'>
+                            <span style='padding-left: 5px;'>Boleto</span>
+                            </input>
+                        </label>
+                    </div>
                 </div>
                 <div class='clearfix'></div>
             </div>
             <div class='row mt_40'>
                 <div class='col-md-2'>
-                    <a class='btn btn-default' href='/br/mocks/shop/products/servers/released' id='change_date'>Confirmar</a>
+                    <a class='btn btn-primary' href='#' id='change_date'>Confirmar</a>
                 </div>
             </div>
         </div>
