--- a/src/html/shop-plans.html
+++ b/src/html/shop-plans.html
@@ -88,7 +88,7 @@
               <br>
               R$ 224,93
             </p>
-            <a href="/br/shop/cart/add/1" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/1" class="btn btn-primary">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
               <br>
               R$ 449,86
             </p>
-            <a href="/br/shop/cart/add/2" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/2" class="btn btn-primary">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
@@ -170,7 +170,7 @@
               <br>
               R$ 940,14
             </p>
-            <a href="/br/shop/cart/add/3" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/3" class="btn btn-primary">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
@@ -215,7 +215,7 @@
               <br>
               R$ 2.008,82
             </p>
-            <a href="/br/shop/cart/add/4" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/4" class="btn btn-primary">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
@@ -256,7 +256,7 @@
               <br>
               R$ 321,33
             </p>
-            <a href="/br/shop/cart/add/5" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/5" class="btn btn-primary">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
@@ -297,7 +297,7 @@
               <br>
               R$ 874,01
             </p>
-            <a href="/br/shop/cart/add/6" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/6" class="btn btn-primary">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
