--- a/src/html/shop/categories.html
+++ b/src/html/shop/categories.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/shop.html' %} {% block content %}
+{% extends '../layouts/shop.html' %} {% block content %}
 <div id="page-menu">
     <div class="container clearfix">
         <div class="menu_page_title">
