--- a/src/html/companies-categories-show.html
+++ b/src/html/companies-categories-show.html
@@ -1,151 +1,4 @@
 {% extends 'layouts/admin.html' %} {% block content %}
-<div class='row border-bottom'>
-    <nav class='navbar tops' role='navigation' style='margin-bottom: 0'>
-        <a class='btn btn-default show-menu pull-left' href='#'>
-            <i class='fa fa-bars'></i>
-        </a>
-        <ul class='nav navbar-top-links navbar-left'>
-            <li class='dropdown'>
-                <a class='dropdown-toggle count-info' data-toggle='dropdown' href='#'>
-                    <i class='fa fa-envelope'></i>
-                    <span class='label label-success'>16</span>
-                </a>
-                <ul class='dropdown-menu dropdown-messages'>
-                    <li>
-                        <div class='dropdown-messages-box'>
-                            <a class='pull-left' href='profile.html'>
-                                <img alt='image' class='img-circle' src='/assets/inspinia/a7.jpg'>
-                            </a>
-                            <div class='media-body'>
-                                <small class='pull-right'>46h ago</small>
-                                <strong>Mike Loreipsum</strong> started following
-                                <strong>Monica Smith</strong>.
-                                <br>
-                                <small class='text-muted'>3 days ago at 7:58 pm - 10.06.2014</small>
-                                </br>
-                            </div>
-                        </div>
-                    </li>
-                    <li class='divider'></li>
-                    <li>
-                        <div class='dropdown-messages-box'>
-                            <a class='pull-left' href='profile.html'>
-                                <img alt='image' class='img-circle' src='/assets/inspinia/a4.jpg'>
-                            </a>
-                            <div class='media-body'>
-                                <small class='pull-right text-navy'>5h ago</small>
-                                <strong>Chris Johnatan Overtunk</strong> started following
-                                <strong>Monica Smith</strong>.
-                                <br>
-                                <small class='text-muted'>Yesterday 1:21 pm - 11.06.2014</small>
-                                </br>
-                            </div>
-                        </div>
-                    </li>
-                    <li class='divider'></li>
-                    <li>
-                        <div class='dropdown-messages-box'>
-                            <a class='pull-left' href='profile.html'>
-                                <img alt='image' class='img-circle' src='/assets/inspinia/profile.jpg'>
-                            </a>
-                            <div class='media-body'>
-                                <small class='pull-right'>23h ago</small>
-                                <strong>Monica Smith</strong> love
-                                <strong>Kim Smith</strong>.
-                                <br>
-                                <small class='text-muted'>2 days ago at 2:30 am - 11.06.2014</small>
-                                </br>
-                            </div>
-                        </div>
-                    </li>
-                    <li class='divider'></li>
-                    <li>
-                        <div class='text-center link-block'>
-                            <a href='mailbox.html'>
-                                <i class='fa fa-envelope'></i>
-                                <strong>Read All Messages</strong>
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-            </li>
-            <li class='dropdown'>
-                <a class='dropdown-toggle count-info' data-toggle='dropdown' href='#'>
-                    <i class='fa fa-bell'></i>
-                    <span class='label label-info'>8</span>
-                </a>
-                <ul class='dropdown-menu dropdown-alerts'>
-                    <li>
-                        <a href='mailbox.html'>
-                            <div>
-                                <i class='fa fa-envelope fa-fw'></i> You have 16 messages
-                                <span class='pull-right text-muted small'>4 minutes ago</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class='divider'></li>
-                    <li>
-                        <a href='profile.html'>
-                            <div>
-                                <i class='fa fa-twitter fa-fw'></i> 3 New Followers
-                                <span class='pull-right text-muted small'>12 minutes ago</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class='divider'></li>
-                    <li>
-                        <a href='grid_options.html'>
-                            <div>
-                                <i class='fa fa-upload fa-fw'></i> Server Rebooted
-                                <span class='pull-right text-muted small'>4 minutes ago</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class='divider'></li>
-                    <li>
-                        <div class='text-center link-block'>
-                            <a href='notifications.html'>
-                                <strong>See All Alerts</strong>
-                                <i class='fa fa-angle-right'></i>
-                            </a>
-                        </div>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        <ul class='nav navbar-top-links navbar-right profiles'>
-            <li class='dropdown profile-element'>
-                <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
-                    <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
-                    <span class=''>
-            <strong class=''>David Williams</strong>
-            <b class='caret'></b>
-          </span>
-                </a>
-                <ul class='dropdown-menu animated'>
-                    <li>
-                        <a href='profile.html'>Profile</a>
-                    </li>
-                    <li>
-                        <a href='contacts.html'>Contacts</a>
-                    </li>
-                    <li>
-                        <a href='mailbox.html'>Mailbox</a>
-                    </li>
-                    <li class='divider'></li>
-                    <li>
-                        <a href='login.html'>
-                            <i class='fa fa-sign-out'></i> Log out
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
-</div>
-<div class='box_notice'>
-</div>
-
 <!-- APP -->
 <div class='row wrapper backs'>
     <div class='col-lg-4 go-back'>
@@ -173,7 +26,7 @@
                         <span>Current name</span>
                     </div>
                     <div class="col-lg-4">
-                        <button class="pull-right btn btn-default btn-inverse">Edit name</button>
+                        <button class="pull-right btn btn-default">Edit name</button>
                     </div>
                 </div>
             </div>
@@ -187,7 +40,7 @@
                         <span>Current slug</span>
                     </div>
                     <div class="col-lg-4">
-                        <button class="pull-right btn btn-default btn-inverse">Edit slug</button>
+                        <button class="pull-right btn btn-default">Edit slug</button>
                     </div>
                 </div>
             </div>
@@ -201,7 +54,7 @@
                         <span>High Performance Server in a Class A Datacenter</span>
                     </div>
                     <div class="col-lg-4">
-                        <button class="pull-right btn btn-default btn-inverse">Edit description</button>
+                        <button class="pull-right btn btn-default">Edit description</button>
                     </div>
                 </div>
             </div>
@@ -219,7 +72,7 @@
                             <i class="fa fa-cloud"></i>
                         </div>
                         <div class="pull-right">
-                            <button class="btn btn-default btn-inverse">Edit icon</button>
+                            <button class="btn btn-default">Edit icon</button>
                         </div>
                     </div>
                     <hr>
@@ -256,7 +109,7 @@
         <!-- preview -->
         <div class="col-lg-4">
             <div class="comp-s-item clearfix">
-                <div class="mt_20">
+                <div class="mr_20">
                     <div class="box_category">
                         <div class="box_icon">
                             <i class="fa fa-cloud"></i>
@@ -266,7 +119,7 @@
                                 Servers
                                 <span>High Performance Server in a Class A Datacenter</span>
                             </h3>
-                            <a href="http://foo.localhost:3004/br/shop/servers" class="btn btn-default btn-inverse">Veja as Opções</a>
+                            <a href="http://foo.localhost:3004/br/shop/servers" class="btn btn-default">Veja as Opções</a>
                         </div>
                     </div>
                 </div>
