--- a/src/html/shop-plans-customize.html
+++ b/src/html/shop-plans-customize.html
@@ -230,7 +230,7 @@
                     <div class="row mt_l">
                         <div class="col-md-12">
                             <div id="submit_form">
-                                <input type="submit" name="commit" value="Revisar Compra" class="btn btn-default pull-right">
+                                <input type="submit" name="commit" value="Revisar Compra" class="btn btn-primary pull-right">
                             </div>
                         </div>
                     </div>
