--- a/src/html/distributor-profile-edit.html
+++ b/src/html/distributor-profile-edit.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class='row wrapper'>
     <div class='col-lg-10'>
-        <h3>Clients</h3>
+        <h3>Accounts</h3>
         <ol class='breadcrumb'>
             <li>
                 <a href='/'>Home</a>
@@ -12,7 +12,7 @@
                 <a>Accounts</a>
             </li>
             <li class='active'>
-                <strong>Clients</strong>
+                <strong>My Account</strong>
             </li>
         </ol>
     </div>
@@ -24,19 +24,6 @@
         <div class='col-lg-12'>
             <h4>Edit profile</h4>
             <form novalidate="novalidate" class="simple_form form-horizontal" id="" action="" method="post">
-                <div class="col-md-3 col-md-offset-4">
-                    <label class="radio">
-                        <input type="radio" value="cpf" name="group_org" class="custom-radio">
-                        <span style="padding-left: 5px;">Person</span>
-                    </label>
-                </div>
-                <div class="col-md-3">
-                    <label class="radio">
-                        <input type="radio" value="cnpj" name="group_org" class="custom-radio" checked="checked"
-                      >
-                        <span style="padding-left: 5px;">Company</span>
-                    </label>
-                </div>
                 <div class="col-md-12">
                     <h5>Personal Information</h5>
                     <div class="form-group">
@@ -44,9 +31,13 @@
                             <label class="control-label">Corporate name</label>
                             <input class="form-control" type="text" placeholder="Foo Inc." />
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-12">
                             <label class="control-label">Trade name</label>
                             <input class="form-control" type="text" placeholder="Foo Inc." />
+                        </div>
+                        <div class="col-md-8">
+                            <label class="control-label">Representant</label>
+                            <input class="form-control" type="text" placeholder="The representant name" />
                         </div>
                         <div class="col-md-4">
                             <label class="control-label">Document</label>
@@ -98,7 +89,7 @@
                     </div>
                 </div>
                 <div class='col-md-4 col-md-offset-7 text-right'>
-                    <input type="submit" name="commit" value="Create client" class="btn btn-default btn-inverse" />
+                    <input type="submit" name="commit" value="Save" class="btn btn-default btn-inverse" />
                 </div>
             </form>
         </div>
